2005-12-23  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/figures/Makefile.am: Mention the new screenshots 
	so they are disted and uploaded.
	* docs/tutorial/gtkmm-tut.xml: Fix a source code path.

2005-12-21  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* configure.in: added makefiles for new example directories
	* docs/tutorial/Makefile.am:
	* docs/tutorial/figures/drawingarea_lines.png:
	* docs/tutorial/gtkmm-tut.xml:
	* examples/book/Makefile.am:
	* examples/book/drawingarea/main.cc:
	* examples/book/drawingarea/myarea.cc:
	* examples/book/drawingarea/myarea.h: complete rework of the drawing area
	chapter of the gtkmm tutorial to use Cairomm for drawing instead of old
	Gdk functions.  Updated text and examples, and added several new examles.

2005-12-21  Murray Cumming <murrayc@murrayc.com>

	* gtk/src/texttagtable.ccg: Put a private class in a 
	anonymous namespace, theoretically to prevent it being 
	exported as ABI. 

2005-12-20  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/entry.hg: Added xalign and 
	truncate-multiline properties.

2005-12-20  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/drawingarea/myarea.cc:
	* gdk/gdkmm/general.cc:
	* gdk/gdkmm/general.h:
	* gdk/src/drawable.hg: Use Cairo objects via 
	Cairo::RefPtr.

2005-12-15  Murray Cumming <murrayc@murrayc.com>

	* gtk/src/adjustment.ccg:
	* gtk/src/adjustment.hg: Generate the constructor, 
	instead of hand coding it, because it now uses properties.

2005-12-15  Murray Cumming  <murrayc@murrayc.com>

	* configure.in:
	* examples/book/Makefile.am:
	* examples/book/statusicon/.cvsignore:
	* examples/book/statusicon/main.cc:
	Add example.
	* gtk/gtkmm.h: #include statusicon.h and 
	cellrendereraccel.h.
	* gtk/src/statusicon.hg: Rename parameter name for 
	stock constructor, so it uses the correct property name.

2005-12-15  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/object.hg: Add class documentation, based on 
	the C documentation. Add documentation for manage().