@@ -1,5 +1,11 @@
 2005-12-23  Murray Cumming  <murrayc@murrayc.com>
 
+	* docs/tutorial/gtkmm-tut.xml: DrawingArea chpater: Move GDK 
+	stuff into an appendix, and remove reference to X, because it is 
+	not always running on X. 
+
+2005-12-23  Murray Cumming  <murrayc@murrayc.com>
+
 	* docs/tutorial/figures/Makefile.am: Mention the new screenshots 
 	so they are disted and uploaded.
 	* docs/tutorial/gtkmm-tut.xml: Fix a source code path.
